--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -7,36 +7,25 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
 </head>
 <body>
-<h1>HELLO</h1>
-    {% if age > 18 and age < 25 %}
-        {% if age == 20 %}
-            <h2>TEST!!! UUUQUQU {{ age }}</h2>
-        {% else %}
-            <h2>TEST {{ age }}</h2>
-        {% endif %}
-    {% elif age > 40 %}
-    <h2>TEST1 {{ age }}</h2>
-    {% else %}
-    <h2>TEST2 {{ age }}</h2>
-    {% endif %}
-    имя {{ name }}
-    </br>
-    Возраст {{ age }}
 <br>
 <a href="create/">создать статью</a>
 <br>
-<img class="image" src="{% static "images/img.png"%}" alt="">
-<br>
 {% for article in articles %}
-    <div class="article">
-        <h4>{{ article.title }}
-            <i>{{ article.author }}</i></h4>
-        <p>{{ article.content }}</p>
-    </div>
+    <div class="card" style="width: 18rem;">
+         <div class="card-body">
+             <h5 class="card-title">{{ article.title }}</h5>
+             <h6 class="card-subtitle mb-2 text-body-secondary">{{ article.author }}</h6>
+             <p class="card-text">{{ article.content }}</p>
+             <a href="#" class="card-link"></a>
+            <a href="#" class="card-link"></a>
+        </div>
+</div>
 {% endfor %}
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
