задали имена роутам, использовали их во views и шаблонах
также обработали ситуацию когда статья не найдена, возвращае 404 ошибку

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <br>
-<a href="create/">создать статью</a>
+<a href="{% url 'create_article' %}">создать статью</a>
 <br>
 {% for article in articles %}
     <div class="card" style="width: 18rem;">
@@ -20,7 +20,7 @@
              <h5 class="card-title">{{ article.title }}</h5>
              <h6 class="card-subtitle mb-2 text-body-secondary">{{ article.author }}</h6>
              <p class="card-text">{{ article.content }}</p>
-             <a href="article/{{ article.id }}/" class="card-link">Детальный просмотр</a>
+             <a href="{% url 'article_detail' article.pk %}" class="card-link">Детальный просмотр</a>
             <a href="#" class="card-link"></a>
         </div>
 </div>
