--- a/source/webapp/templates/article_detail.html
+++ b/source/webapp/templates/article_detail.html
@@ -1,14 +1,7 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
-    <div class="card" style="width: 18rem;">
+{% extends "base.html" %}
+
+{% block content %}
+    <div class="card mt-3" style="width: 18rem;">
          <div class="card-body">
              <h2 class="card-title">{{ article.title }}</h2>
              <h4 class="card-subtitle mb-2 text-body-secondary">{{ article.author }}</h4>
@@ -17,5 +10,4 @@
              <a href="{% url 'articles' %}" class="card-link">На главную</a>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
