--- a/source/webapp/templates/article_detail.html
+++ b/source/webapp/templates/article_detail.html
@@ -7,6 +7,7 @@
              <h4 class="card-subtitle mb-2 text-body-secondary">{{ article.author }}</h4>
              <p class="card-text">{{ article.content }}</p>
              <p class="card-text">{{ article.created_at|date:"Y-m-d" }}</p>
+             <p class="card-text">{{ article.get_status_display}}</p>
              <a href="{% url 'articles' %}" class="card-link">На главную</a>
         </div>
     </div>
