Добавилb валидацию для полей при создании и редактировании статьи

--- a/source/webapp/templates/partial/article_form.html
+++ b/source/webapp/templates/partial/article_form.html
@@ -1,9 +1,26 @@
 {% csrf_token %}
 <label>Title:</label><br/>
-<input type="text" value="{{ article.title }}" name="title"/><br/>
+{% if errors.title %}
+    <input class="border border-danger border-3" type="text" value="{{ article.title }}" name="title"/><br/>
+    <p class="text-danger">{{ errors.title }}</p>
+    {% else %}
+    <input type="text" value="{{ article.title }}" name="title"/><br/>
+{% endif %}
+
 <label>Text:</label><br/>
-<textarea name="content">{{ article.content }}</textarea><br/>
+{% if errors.content %}   
+    <textarea class="border border-danger border-3" name="content" >{{ article.content }}</textarea><br/>
+    <p class="text-danger">{{ errors.content }}</p>
+    {% else %}   
+    <textarea name="content">{{ article.content }}</textarea><br/>
+{% endif %}
+
 <label>Author:</label><br/>
-<input type="text" value="{{ article.author }}" name="author"/><br/>
+{% if errors.author %}
+    <input class="border border-danger border-3" type="text" value="{{ article.author }}" name="author"/><br/>
+    <p class="text-danger">{{ errors.author }}</p>
+    {% else %}     
+    <input class="border border-danger border-3" type="text" value="{{ article.author }}" name="author"/><br/>
+{% endif %}
 <br/>
 <input type="submit" value="{{button_text}}"/>
