--- a/source/webapp/templates/update_article.html
+++ b/source/webapp/templates/update_article.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 
-{% block links %}    
+
+{% block links %}
 {% endblock %}
 
 {% block content %}
-	
-
 <h1>Изменение статьи</h1>
+
 <form action="" method="post">
-    {% include 'partial/article_form.html' with button_text='изменить'%}   
+    {% include 'partial/article_form.html' with button_text='Изменить' %}
 </form>
 {% endblock %}
