--- a/source/webapp/templates/article_detail.html
+++ b/source/webapp/templates/article_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load str_repeat %}
 
 {% block links %}
     <li class="nav-item">
@@ -10,10 +11,16 @@
 {% endblock %}
 
 {% block content %}
+    <p>{{ '*'|repeat:150 }}</p>
+    <p>{{ '-'|repeat:156 }}</p>
+    <p>{{ '+'|repeat:92 }}</p>
+    
+    
+    <p>{{ article|test_func }}</p>
     <div class="card mt-3" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-title">{{ article.title }}</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">{{ article.author }}</h6>
+            <h5 class="card-title">{{ article.title|upper }}</h5>
+            <h6 class="card-subtitle mb-2 text-body-secondary">{{ article.author|default:'Неизвестный' }}</h6>
             <p class="card-text">{{ article.content }}</p>
             <p class="card-text">{{ article.created_at|date:'Y-m-d' }}</p>
             <p class="card-text">{{ article.get_status_display }}</p>
